# project_job_parser_v2

./: README.md  dialog.py  main.py  parsers.py  pyproject.toml
