[tool.poetry]
name = "project-job-parser-v2"
version = "0.1.0"
description = ""
authors = ["Misha <misha.dorozhkin@mail.ru>"]
readme = "README.md"
packages = [{include = "project_job_parser_v2"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
